# personalizer

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
src/personalizer/: __init__.py  __main__.py  app.py  app.tcss  config.py  logging_setup.py  paths.py
src/personalizer/scripts/: gcal_setup.py
src/personalizer/services/: cache.py  dictionary.py  gcal.py  gtasks.py  openai_topic.py
src/personalizer/widgets/: clock.py  event_modal.py  next_hour.py  progress.py  reminder.py  tasks_screen.py  topic.py  word.py
tests/: test_cache.py  test_gcal_filter.py  test_progress.py  test_topic_history.py
